--- a/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
@@ -164,9 +164,12 @@
     <div class="rp-report-section relative rp-report-section-root">
         <div class="rp-report-section-title">
             <div class="rp-card-section">
+                <!--div data-bind="text: report.get('name')"></div-->
                 <!-- ko if: report.get('name') == "Heritage Site" -->
-                <!-- div>Heritage Site</div -->
                 {% include 'views/report-templates/details/heritage_site.htm' %}
+                <!-- /ko -->
+                <!-- ko if: report.get('name') == "Legislative Act" -->
+                {% include 'views/report-templates/details/legislative_act.htm' %}
                 <!-- /ko -->
             </div>
         </div>
