592 - Add Site Submission details

--- a/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
@@ -67,6 +67,9 @@
                 <!-- ko if: report.get('name') == "Government Person" -->
                 {% include 'views/report-templates/details/government_person.htm' %}
                 <!-- /ko -->
+                <!-- ko if: report.get('name') == "Heritage Site Submission" -->
+                {% include 'views/report-templates/details/site_submission.htm' %}
+                <!-- /ko -->
             </div>
         </div>
     </div>
