763 - Remove Skip to Content link

--- a/src/common/media/css/project_common.css
+++ b/src/common/media/css/project_common.css
@@ -335,7 +335,7 @@ img.bc-details-image
     /*}*/
 
     /* Hide unwanted parts of the page */
-    section.search-results-panel, .search-toolbar {
+    section.search-results-panel, .search-toolbar, #skip-link-holder {
         display: none !important;
     }
 
