--- a/src/bcfms/bcfms/templates/views/report-templates/details/collection_event.htm
+++ b/src/bcfms/bcfms/templates/views/report-templates/details/collection_event.htm
@@ -10,6 +10,7 @@
                                                          displayfullvalue: true}
                                             }">
                     </div>
+                    <div data-bind="text: getPoint('collection_location')"></div>
                 </div>
             </dd>
         </dl>
@@ -71,10 +72,21 @@
             </dd>
         </dl>
     </div>
-    <div class="bc-grid-item grid-col-2 grid-row-3" data-bind="visible: nodesHaveData(['fossil_abundance'])">
+    <div class="bc-grid-item grid-col-2 grid-row-3" data-bind="visible: nodesHaveData(['fossil_abundance', 'samples_collected'])">
         <dl class="dl-vertical dl-vertical-bc">
-            <dt>Fossil Abundance</dt>
+            <dt data-bind="visible: nodesHaveData(['samples_collected'])">Samples Collected</dt>
             <dd>
+                <div class="bc-inline" data-bind="component: { name: 'resource-instance-multiselect-widget',
+                                            params: { value: getFirstNodeValue('samples_collected'), state: 'display_value' }
+                                            }, visible: nodesHaveData(['samples_collected'])">
+                </div>
+            </dd>
+            <dt data-bind="visible: nodesHaveData(['samples_collected'])">Fossils Found</dt>
+            <dd data-bind="foreach: {data: fossilNamesForCollectionEvent, as: 'name'}">
+                <div data-bind="text: name"></div>
+            </dd>
+            <dt data-bind="visible: nodesHaveData(['fossil_abundance'])">Fossil Abundance</dt>
+            <dd data-bind="visible: nodesHaveData(['fossil_abundance'])">
                 <div data-bind="component:
                     { name: 'concept-select-widget',
                       params: { value: getFirstNodeValue('fossil_abundance'), state: 'display_value' }
