--- a/src/common/media/css/project_common.css
+++ b/src/common/media/css/project_common.css
@@ -68,6 +68,20 @@ body, h1, h2, h3, h4, h5
     height: 100% !important;
 }
 
+/*******************/
+/* Search card     */
+/*******************/
+.search-listing-body > dt {
+    padding-top: 5px;
+}
+
+/* Don't pad bottom of rich text fields in search card*/
+.search-listing-body > dd > p {
+    margin-bottom: 0;
+}
+/*******************/
+/* End Search card */
+/*******************/
 
 
 
