898 - modify list of research assessment criteria dev - Fix formatting of other journal name widget

--- a/src/bcfms/bcfms/media/css/project.css
+++ b/src/bcfms/bcfms/media/css/project.css
@@ -24,6 +24,7 @@ dl.stratigraphy > dd > div.stratigraphy-level > div
 .card_component.journal_or_volume_name, .card_component.other_journal_or_volume_name {
    display: inline-block;
    width: 49%;
+   vertical-align: top;
 }
 
 .row.journal_or_volume_name span.control-label {
