--- a/src/bcfms/bcfms/media/css/map_legend.css
+++ b/src/bcfms/bcfms/media/css/map_legend.css
@@ -134,3 +134,15 @@ img.cadastral-untitled_provincial {
     background: rgba(206,180,253, 0.6);
     border-color: rgba(167,150,198, 1);
 }
+
+img.land-management-regions {
+    background: black;
+    width: 6px;
+    margin-right: 6px;
+}
+
+img.natural-resource-districts {
+    background: black;
+    width: 6px;
+    margin-right: 6px;
+}
