--- a/src/bcrhp/bcrhp/templates/index.htm
+++ b/src/bcrhp/bcrhp/templates/index.htm
@@ -134,25 +134,29 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             </a>
                         </li>
                         <li>
-                            <a class="vertical-nav-list-link" href="#info-block-1" data-number="2" aria-label="Go to the fast section">
+                            <a class="vertical-nav-list-link" href="#info-block-1" data-number="2" aria-label="Go to the About BCRHP section">
                                 <span class="vertical-nav-list-ref">{% trans "About the BCRHP" %}</span>
                             </a>
                         </li>
                         <li>
-                            <a class="vertical-nav-list-link" href="#info-block-2" data-number="3" aria-label="Go to the workflows section">
+                            <a class="vertical-nav-list-link" href="#info-block-2" data-number="3" aria-label="Go to the Local Government Historic Places section">
                                 <span class="vertical-nav-list-ref">{% trans "Local Government Historic Places" %}</span>
                             </a>
                         </li>
                         <li>
-                            <a class="vertical-nav-list-link" href="#info-block-3" data-number="4" aria-label="Go to the search tools section">
+                            <a class="vertical-nav-list-link" href="#info-block-3" data-number="4" aria-label="Go to the Provincial Historic Places section">
                                 <span class="vertical-nav-list-ref">{% trans "Provincial Historic Places" %}</span>
                             </a>
                         </li>
                         <li>
-                            <a class="vertical-nav-list-link" href="#info-block-4" data-number="5" aria-label="Go to the mobile section">
+                            <a class="vertical-nav-list-link" href="#info-block-4" data-number="5" aria-label="Go to the Federal Government section">
                                 <span class="vertical-nav-list-ref">{% trans "Federal Government Historic Places" %}</span>
                             </a>
                         </li>
+                        <li>
+                            <a class="vertical-nav-list-link" href="#info-block-5" data-number="6" aria-label="Go to the contact Heritage Branch section">
+                                <span class="vertical-nav-list-ref">{% trans "Contact the Heritage Branch" %}</span>
+                            </a>
                     </ul>
                 </div>
 
@@ -220,10 +224,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                                 <!--                                <h2 class="app-info-block-header">{% trans "What are Historic Places?" %}</h2>-->
                                 <h3 class="app-info-block-title">{% trans "What is the BC Register of Historic Places?" %}</h3>
                                 <p class="app-info-block-text">
-                                    {% trans "The BC Register of Historic Places (BCRHP) is part of the provincial heritage register of historic and archaeological sites that exists as a statutory requirement of the " %} <a target="hca" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96187_01">{% trans "Heritage Conservation Act"%}</a> {% trans ". The BC Register of Historic Places is a subset of the records on the provincial heritage register database, and is the province’s official list of post-1846 historic places that have been formally recognized by the Province or by a local government." %}
+                                    {% trans "The BC Register of Historic Places (BCRHP) is an official list of historic places that have been formally recognized by the province or by a local government. The BCRHP supports land use decisions, heritage conservation projects, and public awareness initiatives. There are over 5,000 registered sites representing the diversity of historic places across the province." %}
                                 </p>
                                 <p class="app-info-block-text">
-                                    {% trans "The BC Register of Historic Places supports land use decisions, heritage conservation projects, and public awareness initiatives.  The database contains over 4,600 entries representing the diversity of historic places across the province.  Archaeological sites are not included in the BC Register - contact the Archaeology Branch for information about archaeology in BC." %}
+                                    {% trans "The BCRHP is a subset of the Provincial Heritage Register of historic and archaeological sites that exists as a statutory requirement of the" %} <a target="hca" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96187_01">{% trans "Heritage Conservation Act." %}</a> Archaeological and pre-1846 sites are not included on the BCRHP. Contact the <a target="achaeology_branch" href="https://www2.gov.bc.ca/gov/content/industry/natural-resource-use/archaeology">{% trans "Archaeology Branch" %}</a> {% trans "for information about archaeology in BC." %}
                                 </p>
                             </div>
                     </div>
@@ -247,9 +251,9 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     <!-- Heading Info -->
                     <div class="info-body">
                             <div class="app-info-block-intro">
-                                <h3 class="app-info-block-title">{% trans "Local Government Historic Places on the BC Register" %}</h3>
+                                <h3 class="app-info-block-title">{% trans "Local Government Historic Places" %}</h3>
                                 <p class="app-info-block-text">
-                                    Under the <a target="lgact" href="https://www.bclaws.gov.bc.ca/civix/document/id/consol21/consol21/96323_31">Local Government Act</a> and the <a target="vancharter" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/vanch_29">Vancouver Charter</a>, local governments can formally recognize places with local or regional significance, primarily through municipal designation and community heritage register listings. Local governments are required to notify the province of all newly-recognized municipal historic places so that they can be added to the BC Register.
+                                    {% trans "Under the" %} <a target="lgact" href="https://www.bclaws.gov.bc.ca/civix/document/id/consol21/consol21/96323_31">{% trans "Local Government Act" %}</a>{% trans "and the" %} <a target="vancharter" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/vanch_29">{% trans "Vancouver Charter" %}</a>{% trans ", local governments can formally protect and recognize places with local or regional heritage significance, primarily through municipal designation and community heritage register listings. Local governments notify the province of recognized municipal historic places so they can be added to the BC Register of Historic Places." %}
                                 </p>
                             </div>
                     </div>
@@ -279,9 +283,9 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     <!-- Heading Info -->
                     <div class="info-body">
                             <div class="app-info-block-intro text-center">
-                                <h3 class="app-info-block-title">{% trans "Provincial Historic Places on the BC Register" %}</h3>
+                                <h3 class="app-info-block-title">{% trans "Provincial Historic Places" %}</h3>
                                 <p class="app-info-block-text">
-                                    {% trans "Under the " %} <a target="hca" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96187_01">{% trans "Heritage Conservation Act"%}</a> {% trans ", the province can protect historic places with provincial-level heritage significance in several ways, primarily through designation as Provincial heritage property (Crown land) or Provincial heritage sites (non-Crown land)." %}
+                                    {% trans "Under the " %} <a target="hca" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96187_01">{% trans "Heritage Conservation Act" %} </a> {% trans ", the province protects historic places with provincial-level heritage significance in several ways, primarily through designation as provincial heritage property (Crown land) or provincial heritage sites (non-Crown land)."%}
                                 </p>
                                 <p class="app-info-block-text">
                                     {% trans "In British Columbia, there are over 50 provincial heritage designations for historic places under the Heritage Conservation Act." %}
@@ -306,9 +310,9 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     <!-- Heading Info -->
                     <div class="info-body">
                         <div class="app-info-block-intro text-center">
-                            <h3 class="app-info-block-title">{% trans "Federal Government Historic Places on the BC Register" %}</h3>
+                            <h3 class="app-info-block-title">{% trans "Federal Government Historic Places" %}</h3>
                             <p class="app-info-block-text">
-                                {% trans "The federal government has responsibility for national-level formal recognition. National Historic Sites and other federal recognitions are not officially part of the BC Register but may be noted in the database." %}
+                                {% trans "The federal government has responsibility for national-level formal recognition. National Historic Sites and other federal recognitions are not officially part of the BC Register of Historic Places but are noted in the system." %}
                             </p>
                         </div>
                     </div>
@@ -320,6 +324,25 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                 </div>
             </section>
             <!-- End Info Block 4 -->
+
+            <!-- Info Block 5 -->
+            <section id="info-block-5" class="app-info-block app-info-content relative">
+                <div>
+                    <!-- Heading Info -->
+                    <!-- Heading Info -->
+                    <div class="info-body">
+                        <div class="app-info-block-intro text-center">
+                            <h3 class="app-info-block-title">{% trans "Contact the Heritage Branch" %}</h3>
+                            <p class="app-info-block-text">
+                                {% trans "For more information about historic places or to report any issues, please contact the" %}<a target="heritage_branch" href="https://www2.gov.bc.ca/gov/content/governments/celebrating-british-columbia/historic-places">{% trans "Heritage Branch" %}</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- End Info Block 4 -->
+
+
         </article>
     </main>
 
