890 - Fixed vertical nav container background

--- a/src/common/media/css/bc_index.css
+++ b/src/common/media/css/bc_index.css
@@ -42,6 +42,8 @@
     left: 25px !important;
     right: unset !important;
     top: 150px !important;
+    background: none !important;
+    border: none !important;
 }
 
 .vertical-nav-list-ref {
