890 - Removed centre classes from text blocks

--- a/src/bcrhp/bcrhp/templates/index.htm
+++ b/src/bcrhp/bcrhp/templates/index.htm
@@ -282,7 +282,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
                     <!-- Heading Info -->
                     <div class="info-body">
-                            <div class="app-info-block-intro text-center">
+                            <div class="app-info-block-intro">
                                 <h3 class="app-info-block-title">{% trans "Provincial Historic Places" %}</h3>
                                 <p class="app-info-block-text">
                                     {% trans "Under the " %} <a target="hca" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96187_01">{% trans "Heritage Conservation Act" %} </a> {% trans ", the province protects historic places with provincial-level heritage significance in several ways, primarily through designation as provincial heritage property (Crown land) or provincial heritage sites (non-Crown land)."%}
@@ -309,7 +309,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     <!-- Heading Info -->
                     <!-- Heading Info -->
                     <div class="info-body">
-                        <div class="app-info-block-intro text-center">
+                        <div class="app-info-block-intro">
                             <h3 class="app-info-block-title">{% trans "Federal Government Historic Places" %}</h3>
                             <p class="app-info-block-text">
                                 {% trans "The federal government has responsibility for national-level formal recognition. National Historic Sites and other federal recognitions are not officially part of the BC Register of Historic Places but are noted in the system." %}
@@ -331,10 +331,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     <!-- Heading Info -->
                     <!-- Heading Info -->
                     <div class="info-body">
-                        <div class="app-info-block-intro text-center">
+                        <div class="app-info-block-intro">
                             <h3 class="app-info-block-title">{% trans "Contact the Heritage Branch" %}</h3>
                             <p class="app-info-block-text">
-                                {% trans "For more information about historic places or to report any issues, please contact the" %}<a target="heritage_branch" href="https://www2.gov.bc.ca/gov/content/governments/celebrating-british-columbia/historic-places">{% trans "Heritage Branch" %}</a>
+                                {% trans "For more information about historic places or to report any issues, please contact the" %}<a target="heritage_branch" href="https://www2.gov.bc.ca/gov/content/governments/celebrating-british-columbia/historic-places"> {% trans "Heritage Branch" %}</a>
                             </p>
                         </div>
                     </div>
