--- a/src/bcrhp/bcrhp/templates/views/components/widgets/civic-address-widget.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/widgets/civic-address-widget.htm
@@ -3,7 +3,9 @@
 
 {% block display_value %}
 <div>
-    <!-- ko let: {addressPart: streetAddress()} -->
+    <dt>Address</dt>
+    <dd>
+        <!-- ko let: {addressPart: streetAddress()} -->
     <span data-bind="component: {
                                             name: addressPart.widgetLookup[addressPart.widget_id()].name,
                                             params: {
@@ -16,11 +18,10 @@
                                             }
                                         }, click: function(){console.log(card);}">
     </span>
-    <!-- /ko -->
-</div>
-<div>
-    <!-- ko let: {addressPart: city()} -->
-    <span data-bind="component: {
+        <!-- /ko -->
+        <!-- ko let: {addressPart: city()} -->
+        <span data-bind="visible: (!!ko.unwrap(tile().data[city().attributes.node_id()]) && !!ko.unwrap(tile().data[province().attributes.node_id()]))">,</span>
+        <span data-bind="component: {
                                             name: addressPart.widgetLookup[addressPart.widget_id()].name,
                                             params: {
                                                 tile: tile(),
@@ -31,10 +32,13 @@
                                                 state: 'display_value',
                                             }
                                         }, click: function(){console.log(card);}"></span>
-    <span data-bind="visible: (!!ko.unwrap(tile().data[city().attributes.node_id()]) && !!ko.unwrap(tile().data[province().attributes.node_id()]))">,</span>
-    <!-- /ko -->
+        <!-- /ko -->
+    </dd>
+</div>
+<div>
+    <dt>Province</dt>
     <!-- ko let: {addressPart: province()} -->
-    <span data-bind="component: {
+    <dd data-bind="component: {
                                             name: addressPart.widgetLookup[addressPart.widget_id()].name,
                                             params: {
                                                 tile: tile(),
@@ -45,7 +49,59 @@
                                                 state: 'display_value',
                                             }
                                         }, click: function(){console.log(card);}">
-    </span>
+    </dd>
+    <!-- /ko -->
+</div>
+<div>
+    <dt>Postal Code</dt>
+    <!-- ko let: {addressPart: postal_code()} -->
+    <dd data-bind="component: {
+                                            name: addressPart.widgetLookup[addressPart.widget_id()].name,
+                                            params: {
+                                                tile: tile(),
+                                                node: addressPart.node,
+                                                config: addressPart.config,
+                                                label: addressPart.label(),
+                                                value: tile().data[addressPart.attributes.node_id()],
+                                                state: 'display_value',
+                                            }
+                                        }, click: function(){console.log(card);}">
+    </dd>
+    <!-- /ko -->
+</div>
+<div>
+    <dt>Locality</dt>
+    <!-- ko let: {addressPart: locality()} -->
+    <dd data-bind="component: {
+                                            name: addressPart.widgetLookup[addressPart.widget_id()].name,
+                                            params: {
+                                                tile: tile(),
+                                                node: addressPart.node,
+                                                config: addressPart.config,
+                                                label: addressPart.label(),
+                                                value: tile().data[addressPart.attributes.node_id()],
+                                                state: 'display_value',
+                                            }
+                                        }, click: function(){console.log(card);}">
+    </dd>
+    <!-- /ko -->
+</div>
+<div>
+    <dt>Location Description</dt>
+    <!-- ko let: {addressPart: location_description()} -->
+    <dd data-bind="component: {
+                                            name: addressPart.widgetLookup[addressPart.widget_id()].name,
+                                            params: {
+                                                tile: tile(),
+                                                node: addressPart.node,
+                                                config: addressPart.config,
+                                                label: addressPart.label(),
+                                                value: tile().data[addressPart.attributes.node_id()],
+                                                state: 'display_value',
+                                                displayfullvalue: true
+                                            }
+                                        }">
+    </dd>
     <!-- /ko -->
 </div>
 {% endblock display_value %}
