--- a/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
@@ -56,7 +56,11 @@
             <div class="rp-card-section">
                 <!--div data-bind="text: report.get('name')"></div-->
                 <!-- ko if: report.get('name') == "Heritage Site" -->
+                {% if user.username != 'anonymous' %}
                 {% include 'views/report-templates/details/heritage_site.htm' %}
+                {% else %}
+                {% include 'views/report-templates/details/heritage_site_public.htm' %}
+                {% endif %}
                 <!-- /ko -->
                 <!-- ko if: report.get('name') == "Legislative Act" -->
                 {% include 'views/report-templates/details/legislative_act.htm' %}
