887 - Interim commit of public details page 930 - Updated landing page photos, added slider

--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -1,5 +1,10 @@
 @import "project_common.css";
 @import "map_legend.css";
+@import "accessible-slick-theme.min.css";
+@import "slick.min.css";
+@import "fontawesome/css/fontawesome.min.css";
+@import "fontawesome/css/solid.min.css";
+@import "index-slider.css";
 
 .card_component.start_year, .card_component.end_year, .card_component.dates_approximate {
     display: inline-block;
@@ -32,3 +37,18 @@
     display: inline-block;
     vertical-align: bottom;
 }
+
+.summary-slider img {
+    height: 350px;
+}
+
+/*Details Card*/
+.details-card-section > .rp-card-section {
+    margin-top: 2.5rem;
+}
+
+.card-content-section {
+    margin-top: 1.5rem;
+}
+
+
