--- a/src/bcrhp/bcrhp/templates/views/components/widgets/site-name-filter-widget.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/widgets/site-name-filter-widget.htm
@@ -3,11 +3,12 @@
 
 {% block display_value %}
 <div data-bind="visible: showName">
-    <span data-bind="component: { name: 'text-widget',
+    <dt data-bind="text: siteNameLabel"> </dt>
+    <dd data-bind="component: { name: 'text-widget',
                                   params: { value: siteName,
                                             state: 'display_value'
                                           }
                                 }">
-    </span>
+    </dd>
 </div>
 {% endblock display_value %}
