--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
@@ -1,4 +1,40 @@
-<div class="rp-card-section">
+<div class="details-card-section">
+<div class="data-carousel summary-slider" data-bind="descendantsComplete: initCarousel" style="max-width: calc(100vw - 600px);">
+    <!-- ko foreach: { data: getValuesFromTiles(['site_images', 'image_features', 'image_description', 'copyright', 'photographer']), as: 'tileValues' } -->
+    <div>
+        <img data-bind="attr: {src: ko.unwrap(ko.unwrap(tileValues['site_images'])[0]['url']).replace('/int','')}"/>
+        <div class="photo_info" style="max-width: 500px;">
+        <div>
+            <dt>Photographer</dt>
+            <dd data-bind="component: {name: 'text-widget',
+                               params: {value: tileValues['photographer'],
+                                        state: 'display_value'
+                                        }
+                               }"></dd>
+        </div>
+        <div>
+            <dt>Copyright</dt>
+            <dd data-bind="component: {name: 'text-widget',
+                               params: {value: tileValues['copyright'],
+                                        state: 'display_value'
+                                        }
+                               }"></dd>
+        </div>
+        <div>
+            <dt>Description</dt>
+            <dd data-bind="component: {name: 'rich-text-widget',
+                               params: {value: tileValues['image_description'],
+                                        state: 'display_value',
+                                        displayfullvalue: true
+                                        }
+                               }"></dd>
+        </div>
+        </div>
+    </div>
+    <!-- /ko -->
+</div>
+
+<div class="rp-card-section ">
     <!-- ko let: {targetSection: 'site_name_section', sectionController: siteNamesVisible} -->
     <span class="rp-tile-title">Site Name</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -49,9 +85,10 @@
             "></i>
 
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
-        <div style="display: inline-flex; width: 100%; justify-content: space-between;">
+        <div style="display: inline-flex; width: 100%; justify-content: space-between; flex-direction: column;">
             <!-- ko let: { card: getCardWithName(['Heritage Site Location', 'BC Property Address']) } -->
             <!-- ko foreach: { data: card.tiles, as: 'tile' } -->
+            <div class="card-content-section">
             <dl class="dl-horizontal dl-horizontal-bc"
                 data-bind="css: {'provisional': ko.unwrap(tile.provisionaledits) !== null && tile.userisreviewer === false}">
                 <div data-bind="component: {
@@ -64,6 +101,7 @@
                                             }
                                         }"></div>
             </dl>
+            </div>
             <!-- /ko -->
             <!-- /ko -->
         </div>
@@ -312,34 +350,37 @@
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
         <div style="display: inline-flex; width: 100%; justify-content: space-between;">
             <dl class="dl-horizontal">
+                <!-- ko foreach: { data: getValuesFromTiles(['contributing_resource_count', 'heritage_category', 'ownership']), as: 'tileValues' } -->
                 <div>
-                <dt>Heritage Resources</dt>
-                <dd>
-                <span data-bind="component: { name: 'number-widget',
-                                            params: {
-                                                value: getFirstNodeValue('contributing_resource_count'),
-                                                state: 'display_value'
-                                            }
-                                        }"></span>
-                    <span>,</span>
-                    <span data-bind="component: { name: 'concept-select-widget',
-                                            params: {
-                                                value: getFirstNodeValue('heritage_category'),
-                                                state: 'display_value'
-                                            }
-                                        }"></span>
-                </dd>
-                </div>
-                <div>
-                    <dt>Ownership</dt>
-                    <span data-bind="component: { name: 'concept-select-widget',
-                                            params: {
-                                                value: getFirstNodeValue('ownership'),
-                                                state: 'display_value'
-                                            }
-                                        }"></span>
+                    <div>
+                        <dt>Heritage Resources</dt>
+                        <dd>
+                        <span data-bind="component: { name: 'number-widget',
+                                                    params: {
+                                                        value: tileValues['contributing_resource_count'],
+                                                        state: 'display_value'
+                                                    }
+                                                }"></span><span>,</span>
+                            <span data-bind="component: { name: 'concept-select-widget',
+                                                    params: {
+                                                        value: tileValues['heritage_category'],
+                                                        state: 'display_value'
+                                                    }
+                                                }"></span>
+                        </dd>
+                    </div>
+                    <div>
+                        <dt>Ownership</dt>
+                        <dd data-bind="component: { name: 'concept-select-widget',
+                                                params: {
+                                                    value: tileValues['ownership'],
+                                                    state: 'display_value'
+                                                }
+                                            }"></dd>
 
+                    </div>
                 </div>
+                <!-- /ko -->
             </dl>
         </div>
     </div>
@@ -362,27 +403,29 @@
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
         <div style="display: inline-flex; width: 100%; justify-content: space-between;">
             <dl class="dl-horizontal">
-                <div>
-                    <dt>Heritage Function</dt>
-                    <dd>
-                        <span data-bind="component: { name: 'concept-select-widget',
+                <!-- ko foreach: { data: getValuesFromTiles(['functional_category', 'functional_state']), as: 'tileValues' } -->
+                <div class="card-content-section">
+                    <div>
+                        <dt>Heritage Function</dt>
+                        <dd data-bind="component: { name: 'concept-select-widget',
                                             params: {
-                                                value: getFirstNodeValue('functional_category'),
+                                                value: tileValues['functional_category'],
                                                 state: 'display_value'
                                             }
-                                        }"></span>
-                    </dd>
-                </div>
-                <div>
-                    <dt>Function Period</dt>
-                    <span data-bind="component: { name: 'concept-select-widget',
-                                            params: {
-                                                value: getFirstNodeValue('functional_state'),
-                                                state: 'display_value'
-                                            }
-                                        }"></span>
+                                        }"></dd>
+                    </div>
+                    <div>
+                        <dt>Function Period</dt>
+                        <dd data-bind="component: { name: 'concept-select-widget',
+                                                params: {
+                                                    value: tileValues['functional_state'],
+                                                    state: 'display_value'
+                                                }
+                                            }"></dd>
 
+                    </div>
                 </div>
+                <!-- /ko -->
             </dl>
         </div>
     </div>
@@ -420,4 +463,5 @@
         </div>
     </div>
     <!-- /ko -->
+</div>
 </div>
