--- a/src/common/templates/views/components/widgets/checkbox-boolean.htm
+++ b/src/common/templates/views/components/widgets/checkbox-boolean.htm
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block form %}
-<div class="row widget-wrapper, class: nodeCssClasses">
+<div class="row widget-wrapper">
     <div class="form-group">
         <!-- ko if: node -->
         <i data-bind="css: {'ion-asterisk widget-label-required': node.isrequired}"></i>
@@ -41,6 +41,6 @@
 {% block report %}
 <!-- ko if: ko.unwrap(value) === true -->
 <!--dt data-bind="text: label"></dt-->
-<dd data-bind="text: displayValue() || $root.translations.none, class: nodeCssClasses"></dd>
+<dd data-bind="text: displayValue() || $root.translations.none"></dd>
 <!-- /ko -->
 {% endblock report %}
