--- a/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
@@ -1,7 +1,12 @@
 {% extends "views/report-templates/default.htm" %}
 {% load static %}
 {% load template_tags %}
+{% load webpack_static from webpack_loader %}
 {% load i18n %}
+
+
+<link rel="stylesheet" type="text/css" href="{% webpack_static 'plugins/slick/slick.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% webpack_static 'plugins/slick/accessible-slick-theme.min.css' %}">
 
 {% block report_title_bar %}
 <!-- Report Title Bar -->
