--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
@@ -190,49 +190,48 @@
 
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
         <div style="display: inline-flex; width: 100%; justify-content: space-between;">
+
+            <!-- ko let: {widget: getWidgetForAlias('designation_or_protection_start_date')}-->
+            <!-- ko foreach: { data: getValuesFromTiles(['legislative_act', 'responsible_government', 'designation_or_protection_start_date', 'reference_number']), as: 'values' } -->
             <dl class="dl-horizontal">
                 <div>
                 <dt>Recognition Type (fix)</dt>
                 <dd>
-                    <!-- ko foreach: { data: getResourceInstanceValues('legislative_act'), as: 'legislative_act' } -->
                     <div data-bind="component: {
                                             name: 'resource-instance-select-widget',
-                                            params: { value: legislative_act, state: 'display_value'}
+                                            params: { value: values['legislative_act'], state: 'display_value'}
                                         }"></div>
-                    <!-- /ko -->
                 </dd>
                 </div>
                 <div>
                     <dt>Recognition Government</dt>
                     <dd>
-                        <!-- ko foreach: { data: getResourceInstanceValues('responsible_government'), as: 'responsible_government' } -->
                         <div data-bind="component: {
                                             name: 'resource-instance-select-widget',
-                                            params: { value: responsible_government, state: 'display_value'}
+                                            params: { value: values['responsible_government'], state: 'display_value'}
                                         }"></div>
-                        <!-- /ko -->
                     </dd>
                 </div>
                 <div>
-                    <dt>Recognition Date (fix)</dt>
+                    <dt>Recognition Date</dt>
                     <dd>
-                        <!-- ko foreach: { data: getResourceInstanceValues('responsible_government'), as: 'responsible_government' } -->
-                        <div data-bind="component: {
-                                            name: 'resource-instance-select-widget',
-                                            params: { value: responsible_government, state: 'display_value'}
-                                        }"></div>
-                        <!-- /ko -->
+                        <div data-bind="component: { name: 'datepicker-widget',
+                                            params: { value: values['designation_or_protection_start_date'],
+                                            node: widget.node,
+                                            state: 'display_value' }
+                                            }"></div>
                     </dd>
                 </div>
                 <div>
                     <dt>Reference Number</dt>
                     <dd data-bind="component: {name: 'text-widget',
-                           params: {value: getFirstNodeValue('reference_number'),
-                                    state: 'display_value'
+                           params: {value: values['reference_number'], state: 'display_value'
                                     }
                            }"></dd>
                 </div>
             </dl>
+            <!-- /ko -->
+            <!-- /ko -->
         </div>
     </div>
     <!-- /ko -->
